# service_provider_key_value

./: .dir-locals.el  .gitignore  Makefile.am  Makefile.suggested  README.md  README.wiki  conanfile.msgdef.py  conanfile.py  conanfile.python_rkgui.py  conanfile.rkgui.py  configure.ac  configure.ac.in  interface_key_value.cpp  interface_key_value.h  interface_key_value.pt  interface_key_value.pt.in  key_value_helper.cpp  libkey_value_helper.pc.in  project.properties  service_provider_key_value.pc.in  service_provider_key_value.pt.in  supported_archs.mk
.github/workflows/: build-deb.yaml  build-ln-msgdef-deb.yaml  trigger-tag.yaml
bindings/python/: conanfile.py
bindings/python/rk_gtk3_gui_plugin/service_provider_key_value/: __init__.py  interface_key_value.py  interface_key_value.ui
bindings/python/rk_gui_plugin/service_provider_key_value/: interface_key_value.py  interface_key_value.ui
debian/: changelog  control  service-provider-key-value.install
doc/: README
include/interface_key_value/: key_value_helper.h  module_intf.h
include/service_provider_key_value/: base.h  key_value_helper.h
m4/: rmpm.m4
message_definitions/robotkernel/key_value/: list  read  write
share/ln/: interface_key_value.inc.lnc  service_provider_key_value.inc.lnc  service_provider_key_value.inc.lnc.in
share/ln/message_definitions/robotkernel/key_value/: description  list_descriptions  string
share/python/key_value_wrapper/: __init__.py
share/service_definitions/: conanfile.py
share/service_definitions/debian/: changelog  control  rules
share/service_definitions/robotkernel/service_provider_key_value/: list  list_descriptions  write
share/service_definitions/service_provider/key_value/: list  list_descriptions  read  write
share/service_definitions/service_provider_key_value/: list  list_descriptions  read  write
src/: Makefile.am  provider.cpp  provider.h
src/main/cpp/: Makefile.am  interface_key_value.cpp  interface_key_value.h  key_value_helper.cpp  mds.cpp  mds.h  provider.cpp  provider.h
src/main/cpp/include/interface_key_value/: key_value_helper.h  module_intf.h
src/main/cpp/include/service_provider/key_value/: base.h  key_value_helper.h
